# vibops-mcp

./: .gitignore  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  new_tool.md
tests/: test_actions.py  test_client.py  test_config.py  test_finops.py  test_governance.py  test_observation.py  test_server.py
vibops_mcp/: __init__.py  client.py  server.py
vibops_mcp/tools/: actions.py  config.py  finops.py  governance.py  observation.py
