[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibops-mcp"
version = "0.1.0"
description = "VibOps MCP server — control your GPU infrastructure from Claude Desktop, Cursor, or any MCP client"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "gpu", "kubernetes", "ai-infrastructure", "vibops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
vibops-mcp = "vibops_mcp.server:main"

[project.urls]
Homepage = "https://vibops.io"
Repository = "https://github.com/vibops/vibops-mcp"
Issues = "https://github.com/vibops/vibops-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["vibops_mcp"]
